--- a/220226-pixelated/plugin-demo.html
+++ b/220226-pixelated/plugin-demo.html
@@ -28,10 +28,10 @@
 
 <body>
   <ul>
-    <li><img src="./assert/0.png" /></li>
-    <li><img src="./assert/1.png" /></li>
-    <li><img src="./assert/2.png" /></li>
-    <li><img src="./assert/3.png" /></li>
+    <li><img src="./assets/0.png" /></li>
+    <li><img src="./assets/1.png" /></li>
+    <li><img src="./assets/2.png" /></li>
+    <li><img src="./assets/3.png" /></li>
   </ul>
   <div>
     <button id="generate">铺上马赛克</button>
